--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.26.1",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.14"
+    "vue-cookie": "^1.1.4",
+    "vue-router": "^4.0.14",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
