--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --port 8081",
+    "dev": "vite --port 8081 --host",
     "build": "vite build",
     "preview": "vite preview --port 5050",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
@@ -16,11 +16,15 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.8.4"
   }
 }
